# huffman

./: CMakeLists.txt  README.md  huffman_testing.cpp  main.cpp
lib/: CMakeLists.txt  coder.cpp  coder.h  decoder.cpp  decoder.h  my_structs.h
